--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/bottom-tabs": "^6.5.8",
     "@react-navigation/native": "^6.1.7",
     "@react-navigation/stack": "^6.3.17",
+    "@types/react-native-snap-carousel": "^3.8.5",
     "axios": "^1.3.4",
     "babel-plugin-inline-json-import": "^0.3.2",
     "jwt-decode": "^3.1.2",
@@ -34,6 +35,7 @@
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
     "react-native-shadow-2": "^7.0.6",
+    "react-native-snap-carousel": "4.0.0-beta.6",
     "react-native-svg": "^13.9.0",
     "recoil": "^0.7.7"
   },
