--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ build/
 !default.mode2v3
 *.perspectivev3
 !default.perspectivev3
-xcuserdata
+xcusersData
 *.xccheckout
 *.moved-aside
 DerivedData
