--- a/package.json
+++ b/package.json
@@ -30,11 +30,12 @@
     "react-native-device-info": "^10.6.0",
     "react-native-gesture-handler": "^2.12.0",
     "react-native-haptic-feedback": "^2.0.3",
+    "react-native-linear-gradient": "^2.8.2",
     "react-native-reanimated": "^3.3.0",
     "react-native-recoil-persist": "^0.0.6",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
-    "react-native-shadow-2": "^7.0.6",
+    "react-native-shadow-2": "^7.0.8",
     "react-native-snap-carousel": "4.0.0-beta.6",
     "react-native-svg": "^13.9.0",
     "recoil": "^0.7.7"
